==> terjeio/grblHAL/drivers/MSP432/serial.c <==
#define __serial_h__
#include "serial.h"
#define TXBUSY(uart) ((uart->IE & EUSCI_A_IE_TXIE) || (uart->STATW & EUSCI_A_STATW_BUSY))

void serialInit (void)
{
    SERIAL_MODULE->CTLW0 = EUSCI_A_CTLW0_SWRST|EUSCI_A_CTLW0_SSEL__SMCLK;
    SERIAL_MODULE->BRW = 6;
    SERIAL_MODULE->MCTLW = (0x20 << 8) | (8 << 4) | 1;
    SERIAL_MODULE->IFG = ~EUSCI_A_IFG_RXIFG;
    SERIAL_MODULE->CTLW0 &= ~EUSCI_A_CTLW0_SWRST;
    SERIAL_MODULE->IE = EUSCI_A_IE_RXIE;

    NVIC_SetPriority(SERIAL_MODULE_INT, 3);
    NVIC_EnableIRQ(SERIAL_MODULE_INT);

    SERIAL_PORT->SEL0 = SERIAL_RX|SERIAL_TX;    // set 2-UART pins as second function

    __enable_interrupts();

#ifdef RTS_PORT
    RTS_PORT->DIR |= RTS_BIT;
    BITBAND_PERI(RTS_PORT->OUT, RTS_PIN) = 0;
#endif
}

bool serialPutC (const char c) {

    uint32_t next_head;

    if(txbuffer.head != txbuffer.tail || !serialPutCNonBlocking(c)) {   // Try to send character without buffering...

        next_head = (txbuffer.head + 1) & (TX_BUFFER_SIZE - 1);         // .. if not, set and update head pointer

        while(txbuffer.tail == next_head) {                             // While TX buffer full
            SERIAL_MODULE->IE |= EUSCI_A_IE_TXIE;                       // Enable TX interrupts???
            if(!hal.stream_blocking_callback())                         // check if blocking for space,
                return false;                                           // exit if not (leaves TX buffer in an inconsistent state)
        }

        txbuffer.data[txbuffer.head] = c;                               // Add data to buffer
        txbuffer.head = next_head;                                      // and update head pointer

        SERIAL_MODULE->IE |= EUSCI_A_IE_TXIE;                           // Enable TX interrupts
    }

    return true;
}

int16_t serialGetC (void)
{
    __disable_interrupts();

    uint32_t bptr = rxbuffer.tail;

    if(bptr == rxbuffer.head) {
        __enable_interrupts();
        return -1; // no data available else EOF
    }

    char data = rxbuffer.data[bptr++];              // Get next character, increment tmp pointer
    rxbuffer.tail = bptr & (RX_BUFFER_SIZE - 1);    // and update pointer
    __enable_interrupts();

#ifdef RTS_PORT
    if (rts_state && BUFCOUNT(rxbuffer.head, rxbuffer.tail, RX_BUFFER_SIZE) < RX_BUFFER_LWM) // Clear RTS if below LWM
        BITBAND_PERI(RTS_PORT->OUT, RTS_PIN) = rts_state = 0;
#endif

    return (int16_t)data;
}

void serial2Init (uint32_t baud_rate)
{
    SERIAL2_MODULE->CTLW0 = EUSCI_A_CTLW0_SWRST|EUSCI_A_CTLW0_SSEL__SMCLK;

    switch(baud_rate)
    {
        case 19200:
            SERIAL2_MODULE->BRW = 39;
            SERIAL2_MODULE->MCTLW = (0x0 << 8) | (1 << 4) | 1;
            break;

        default: // 115200
            SERIAL2_MODULE->BRW = 6;
            SERIAL2_MODULE->MCTLW = (0x20 << 8) | (8 << 4) | 1;
            break;
    }

    SERIAL2_MODULE->IFG = ~EUSCI_A_IFG_RXIFG;
    SERIAL2_MODULE->CTLW0 &= ~EUSCI_A_CTLW0_SWRST;

    NVIC_SetPriority(SERIAL2_MODULE_INT, 3);
    NVIC_EnableIRQ(SERIAL2_MODULE_INT);

    SERIAL2_PORT->SEL0 = SERIAL_RX|SERIAL_TX;    // set 2-UART pins as second function

#if MODBUS_ENABLE
    SERIAL2_MODULE->IE = EUSCI_A_IE_RXIE;
#endif
}

bool serial2SetBaudRate (uint32_t baud_rate)
{
    static bool init_ok = false;

    if(!init_ok) {
        serial2Init(baud_rate);
        init_ok = true;
    }

    switch(baud_rate)
    {
        case 19200:
            SERIAL2_MODULE->BRW = 39;
            SERIAL2_MODULE->MCTLW = (0x0 << 8) | (1 << 4) | 1;
            break;

        default: // 115200
            SERIAL2_MODULE->BRW = 6;
            SERIAL2_MODULE->MCTLW = (0x20 << 8) | (8 << 4) | 1;
            break;
    }

    return true;
}

bool serial2PutC (const char c) {

    uint32_t next_head;

    if(txbuffer2.head != txbuffer2.tail || !serial2PutCNonBlocking(c)) {    // Try to send character without buffering...

        next_head = (txbuffer2.head + 1) & (TX_BUFFER_SIZE - 1);            // .. if not, set and update head pointer

        while(txbuffer2.tail == next_head) {                                // While TX buffer full
            SERIAL_MODULE->IE |= EUSCI_A_IE_TXIE;                           // Enable TX interrupts???
        }

        txbuffer2.data[txbuffer2.head] = c;                                 // Add data to buffer
        txbuffer2.head = next_head;                                         // and update head pointer

        SERIAL2_MODULE->IE |= EUSCI_A_IE_TXIE;                              // Enable TX interrupts
    }

    return true;
}

void serial2TxFlush (void)
{
    SERIAL2_MODULE->IE &= ~EUSCI_A_IE_TXIE;
    txbuffer2.tail = txbuffer2.head;
}

uint16_t serial2TxCount (void)
{
    uint32_t tail = txbuffer2.tail, head = txbuffer2.head;

    return BUFCOUNT(head, tail, TX_BUFFER_SIZE) + (TXBUSY(SERIAL2_MODULE) ? 1 : 0);
}
